--- a/@uncover-ui/react/package.json
+++ b/@uncover-ui/react/package.json
@@ -2,7 +2,7 @@
     "name": "@uncover-ui/react",
     "author": "uncoverthefuture",
     "module": "dist/react.esm.js",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "Resuable ui component for react web development",
     "license": "MIT",
     "main": "dist/index.js",
@@ -54,15 +54,13 @@
     ],
     "devDependencies": {
         "@babel/core": "^7.23.5",
-        "@chakra-ui/react": "^2.8.2",
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
         "@size-limit/preset-small-lib": "^11.0.0",
         "@storybook/addon-essentials": "^7.6.3",
         "@storybook/addon-info": "^5.3.21",
         "@storybook/addon-links": "^7.6.3",
         "@storybook/addons": "^7.6.3",
         "@storybook/react": "^7.6.3",
+        "@types/lodash": "^4.14.202",
         "@types/react": "^18.2.41",
         "@types/react-dom": "^18.2.17",
         "babel-loader": "^9.1.3",
@@ -83,9 +81,14 @@
         "typescript": "^5.3.2"
     },
     "dependencies": {
+        "@chakra-ui/react": "^2.8.2",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "autoprefixer": "^10.4.16",
         "bootstrap": "^5.3.2",
         "chakra-react-select": "^4.7.6",
+        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
         "node-sass": "^9.0.0",
         "react-bootstrap": "^2.9.1",
         "react-dropzone": "^14.2.3",
