--- a/@uncover-ui/react/package.json
+++ b/@uncover-ui/react/package.json
@@ -2,7 +2,7 @@
     "name": "@uncover-ui/react",
     "author": "uncoverthefuture",
     "module": "dist/react.esm.js",
-    "version": "0.1.4",
+    "version": "0.1.5",
     "description": "Resuable ui component for react web development",
     "license": "MIT",
     "main": "dist/index.js",
@@ -73,6 +73,7 @@
         "react": ">=18",
         "react-dom": "^18.2.0",
         "react-is": "^18.2.0",
+        "rollup-plugin-copy": "^3.5.0",
         "rollup-plugin-postcss": "^4.0.2",
         "scss": "^0.2.4",
         "size-limit": "^11.0.0",
