--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
     "name": "@uncover-ui/react",
     "author": "uncoverthefuture",
     "module": "dist/react.esm.js",
-    "version": "0.1.6",
+    "version": "0.2.2",
     "description": "Resuable ui component for react web development",
     "license": "MIT",
     "main": "dist/index.js",
@@ -63,6 +63,7 @@
         "@types/lodash": "^4.14.202",
         "@types/react": "^18.2.41",
         "@types/react-dom": "^18.2.17",
+        "@types/reactjs-localstorage": "^1.0.2",
         "babel-loader": "^9.1.3",
         "cssnano": "^6.0.1",
         "framer-motion": "^10.16.12",
@@ -97,6 +98,7 @@
         "react-bootstrap": "^2.9.1",
         "react-dropzone": "^14.2.3",
         "react-icons": "^4.12.0",
-        "react-phone-number-input": "^3.3.7"
+        "react-phone-number-input": "^3.3.7",
+        "reactjs-localstorage": "^1.0.1"
     }
 }
