--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
-    "packages": [
-      "packages/*",
-      "examples/*"
-    ],
-    "version": "independent"
-  }
+  "packages": [
+    "packages/*",
+    "examples/*"
+  ],
+  "version": "independent",
+  "npmClient": "yarn",
+  "useWorkspaces": true
+}
