--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "publish": "lerna publish",
+    "repair": "lerna repair",
     "publish:react-native": "lerna publish from-package --scope=@uncover-ui/react-native"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
+  },
+  "resolutions": {
+    "**/@types/react": "^17.0.0",
+    "**/react": "^17.0.2"
   },
   "repository": {
     "type": "git",
