--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -30,12 +30,15 @@
         "react-native-actions-sheet": "^0.9.3",
         "react-native-flash-message": "^0.4.2",
         "react-native-gesture-handler": "^2.17.1",
+        "react-native-mmkv": "^2.12.2",
         "react-native-responsive-fontsize": "^0.5.1",
-        "react-native-responsive-screen": "^1.4.2"
+        "react-native-responsive-screen": "^1.4.2",
+        "react-native-vector-icons": "^10.0.0"
     },
     "devDependencies": {
         "@types/react": "^16.9.0",
         "@types/react-native": "^0.63.0",
+        "@types/react-native-vector-icons": "^6.4.18",
         "typescript": "^4.0.0"
     },
     "peerDependencies": {
@@ -51,7 +54,9 @@
         "react-native-actions-sheet": "^0.9.3",
         "react-native-flash-message": "^0.4.2",
         "react-native-gesture-handler": "^2.17.1",
+        "react-native-mmkv": "^2.12.2",
         "react-native-responsive-fontsize": "^0.5.1",
-        "react-native-responsive-screen": "^1.4.2"
+        "react-native-responsive-screen": "^1.4.2",
+        "react-native-vector-icons": "^10.0.0"
     }
 }
