--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -23,21 +23,28 @@
         "@react-native-async-storage/async-storage": "^1.23.1",
         "@react-native-picker/picker": "^2.7.7",
         "@react-navigation/native": "^6.1.17",
+        "add": "^2.0.6",
+        "expo-linear-gradient": "^13.0.2",
         "he": "^1.2.0",
         "moment": "^2.30.1",
-        "react": ">=16.8.0",
-        "react-native": ">=0.60.0",
+        "react": "^18.3.1",
+        "react-native": "^0.74.2",
         "react-native-actions-sheet": "^0.9.3",
+        "react-native-fade-loading": "^1.0.1",
         "react-native-flash-message": "^0.4.2",
         "react-native-gesture-handler": "^2.17.1",
+        "react-native-linear-gradient": "^2.8.3",
         "react-native-mmkv": "^2.12.2",
+        "react-native-modal-datetime-picker": "^17.1.0",
+        "react-native-phone-number-input": "^2.1.0",
         "react-native-responsive-fontsize": "^0.5.1",
         "react-native-responsive-screen": "^1.4.2",
-        "react-native-vector-icons": "^10.0.0"
+        "react-native-vector-icons": "^10.0.0",
+        "yarn": "^1.22.22"
     },
     "devDependencies": {
-        "@types/react": "^16.9.0",
-        "@types/react-native": "^0.63.0",
+        "@types/react": "^18.3.3",
+        "@types/react-native": "^0.73.0",
         "@types/react-native-vector-icons": "^6.4.18",
         "typescript": "^4.0.0"
     },
@@ -49,8 +56,8 @@
         "@react-navigation/native": "^6.1.17",
         "he": "^1.2.0",
         "moment": "^2.30.1",
-        "react": ">=16.8.0",
-        "react-native": ">=0.60.0",
+        "react": "^18.3.1",
+        "react-native": "^0.74.2",
         "react-native-actions-sheet": "^0.9.3",
         "react-native-flash-message": "^0.4.2",
         "react-native-gesture-handler": "^2.17.1",
