--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -65,5 +65,6 @@
         "react-native-responsive-fontsize": "^0.5.1",
         "react-native-responsive-screen": "^1.4.2",
         "react-native-vector-icons": "^10.0.0"
-    }
+    },
+    "gitHead": "19a931e0179f997de627d912f9caac64d290af56"
 }
