--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -100,5 +100,6 @@
         "react-icons": "^4.12.0",
         "react-phone-number-input": "^3.3.7",
         "reactjs-localstorage": "^1.0.1"
-    }
+    },
+    "gitHead": "19a931e0179f997de627d912f9caac64d290af56"
 }
