--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,14 +1,14 @@
 {
     "name": "@uncover-ui/react",
     "author": "uncoverthefuture",
-    "module": "dist/react.esm.js",
+    "module": "lib/react.esm.js",
     "version": "0.2.9",
     "description": "Resuable ui component for react web development",
     "license": "MIT",
-    "main": "dist/index.js",
-    "typings": "dist/index.d.ts",
+    "main": "lib/index.js",
+    "typings": "lib/index.d.ts",
     "files": [
-        "dist",
+        "lib",
         "src"
     ],
     "engines": {
@@ -19,7 +19,9 @@
     },
     "scripts": {
         "start": "tsdx watch",
-        "build": "tsdx build",
+        "build": "yarn clean && tsdx build",
+        "clean": "rimraf ./dist",
+        "reinstall": "rimraf ./node_modules && yarn",
         "test": "tsdx test --passWithNoTests",
         "lint": "tsdx lint",
         "prepare": "tsdx build",
@@ -44,11 +46,11 @@
     },
     "size-limit": [
         {
-            "path": "dist/react.cjs.production.min.js",
+            "path": "lib/react.cjs.production.min.js",
             "limit": "10 KB"
         },
         {
-            "path": "dist/react.esm.js",
+            "path": "lib/react.esm.js",
             "limit": "10 KB"
         }
     ],
@@ -74,6 +76,7 @@
         "react": ">=18",
         "react-dom": "^18.2.0",
         "react-is": "^18.2.0",
+        "rimraf": "^5.0.7",
         "rollup-plugin-copy": "^3.5.0",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-sass": "^1.12.21",
@@ -95,11 +98,11 @@
         "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
         "node-sass": "^9.0.0",
-        "react-bootstrap": "^2.9.1",
+        "react-bootstrap": "^2.10.3",
         "react-dropzone": "^14.2.3",
         "react-icons": "^4.12.0",
         "react-phone-number-input": "^3.3.7",
         "reactjs-localstorage": "^1.0.1"
     },
-    "gitHead": "19a931e0179f997de627d912f9caac64d290af56"
+    "gitHead": "bfb43b405edbb3619881e66b0fb96538d48fccc2"
 }
