--- a/examples/react-native-app/package.json
+++ b/examples/react-native-app/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@uncover-ui/react-native": "^1.1.1",
     "react": "18.2.0",
     "react-native": "0.74.2"
   },
