--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,14 +1,14 @@
 {
     "name": "@uncover-ui/react",
     "author": "uncoverthefuture",
-    "module": "lib/react.esm.js",
+    "module": "dist/react.esm.js",
     "version": "0.2.9",
     "description": "Resuable ui component for react web development",
     "license": "MIT",
-    "main": "lib/index.js",
-    "typings": "lib/index.d.ts",
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
     "files": [
-        "lib",
+        "dist",
         "src"
     ],
     "engines": {
@@ -21,7 +21,7 @@
         "start": "tsdx watch",
         "build": "yarn clean && tsdx build",
         "clean": "rimraf ./dist",
-        "reinstall": "rimraf ./node_modules && yarn",
+        "reinstall": "rimraf ./node_modules && rimraf ./yarn.lock && yarn",
         "test": "tsdx test --passWithNoTests",
         "lint": "tsdx lint",
         "prepare": "tsdx build",
@@ -46,11 +46,11 @@
     },
     "size-limit": [
         {
-            "path": "lib/react.cjs.production.min.js",
+            "path": "dist/react.cjs.production.min.js",
             "limit": "10 KB"
         },
         {
-            "path": "lib/react.esm.js",
+            "path": "dist/react.esm.js",
             "limit": "10 KB"
         }
     ],
