--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -12,6 +12,9 @@
     ],
     "author": "uncoverthefuture",
     "license": "MIT",
+    "files": [
+        "lib"
+    ],
     "publishConfig": {
         "access": "public"
     },
