--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,8 +8,7 @@
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
     "files": [
-        "dist",
-        "src"
+        "dist"
     ],
     "engines": {
         "node": ">=10"
