updated structure of importinng and extending theme, corrected and set default colors

--- a/packages/react-native/tsconfig.json
+++ b/packages/react-native/tsconfig.json
@@ -1,26 +1,42 @@
 {
-    "compilerOptions": {
-      "baseUrl": "src",
-      "target": "es5",
-      "module": "commonjs",
-      "lib": ["es6"],
-      "allowJs": true,
-      "jsx": "react-jsx",
-      "declaration": true,
-      "outDir": "lib",
-      "strict": true,
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "paths": {
-        "@assets/*": ["assets/*"],
-        "@components/*": ["components/*"],
-        "@utilities/*": ["utilities/*"],
-        "@providers/*": ["providers/*"],
-        "@themes/*": ["themes/*"]
-        }
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "lib"]
-  }
-  
+  "compilerOptions": {
+    "baseUrl": "src",
+    "target": "es5",
+    "module": "commonjs",
+    "lib": [
+      "es6"
+    ],
+    "allowJs": true,
+    "jsx": "react-jsx",
+    "declaration": true,
+    "outDir": "lib",
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "paths": {
+      "@assets/*": [
+        "assets/*"
+      ],
+      "@components/*": [
+        "components/*"
+      ],
+      "@utilities/*": [
+        "utilities/*"
+      ],
+      "@providers/*": [
+        "providers/*"
+      ],
+      "@themes/*": [
+        "themes/*"
+      ]
+    }
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "lib"
+  ]
+}
