updated structure of importinng and extending theme, corrected and set default colors

--- a/examples/react-native-app/ios/ReactNativeApp/Info.plist
+++ b/examples/react-native-app/ios/ReactNativeApp/Info.plist
@@ -24,6 +24,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>MinimumOSVersion</key>
+<string>17.0</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
