updated structure of importinng and extending theme, corrected and set default colors

--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -19,9 +19,9 @@
         "access": "public"
     },
     "scripts": {
-        "build": "tsc",
+        "build": "yarn clean && tsc",
         "watch": "tsc --watch",
-        "clean": "rm -rf lib",
+        "clean": "rimraf lib",
         "reinstall": "rimraf ./node_modules && rimraf ./yarn.lock && yarn"
     },
     "dependencies": {
