--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -13,7 +13,7 @@
     "author": "uncoverthefuture",
     "license": "MIT",
     "files": [
-        "lib/*"
+        "lib"
     ],
     "publishConfig": {
         "access": "public"
@@ -22,7 +22,8 @@
         "build": "yarn clean && tsc",
         "watch": "tsc --watch",
         "clean": "rimraf lib",
-        "reinstall": "rimraf ./node_modules && rimraf ./yarn.lock && yarn"
+        "reinstall": "rimraf ./node_modules && rimraf ./yarn.lock && yarn",
+        "prepublishOnly": "yarn build"
     },
     "dependencies": {
         "@emotion/native": "^11.11.0",
