--- a/packages/react-native-modal-provider/package.json
+++ b/packages/react-native-modal-provider/package.json
@@ -43,7 +43,7 @@
         "react": "^18.3.1",
         "react-native": "^0.74.2",
         "react-native-gesture-handler": "^2.17.1",
-        "react-native-responsive-screen": "^1.4.2",
+        "react-native-responsive-screen": "^1.4.2"
     },
     "repository": {
         "type": "git",
