--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.1.14",
+    "version": "1.1.15",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -19,7 +19,9 @@
         "access": "public"
     },
     "scripts": {
-        "build": "yarn clean && tsc",
+        "build": "yarn clean && yarn build:js && yarn build:types",
+        "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+        "build:types": "tsc --emitDeclarationOnly",
         "watch": "tsc --watch",
         "clean": "rimraf lib",
         "reinstall": "rimraf ./node_modules && rimraf ./yarn.lock && yarn",
@@ -34,6 +36,7 @@
         "add": "^2.0.6",
         "expo-linear-gradient": "^13.0.2",
         "he": "^1.2.0",
+        "metro": "^0.80.9",
         "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-native": "^0.74.2",
@@ -52,12 +55,23 @@
         "yarn": "^1.22.22"
     },
     "devDependencies": {
+        "@babel/cli": "^7.24.7",
+        "@babel/core": "^7.24.7",
+        "@babel/preset-env": "^7.24.7",
+        "@babel/preset-react": "^7.24.7",
+        "@babel/preset-typescript": "^7.24.7",
         "@types/he": "^1.2.3",
         "@types/react": "^18.3.3",
         "@types/react-native": "^0.73.0",
         "@types/react-native-vector-icons": "^6.4.18",
+        "babel-plugin-module-resolver": "^5.0.2",
+        "metro-react-native-babel-preset": "^0.77.0",
+        "metro-resolver": "^0.80.9",
+        "react-native-svg-transformer": "^1.4.0",
+        "react-native-typescript-transformer": "^1.2.13",
         "rimraf": "^5.0.7",
-        "typescript": "^4.0.0"
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.5.2"
     },
     "peerDependencies": {
         "@emotion/native": "^11.11.0",
