--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "packages/*"
   ],
   "scripts": {
+    "prepare": "husky install",
     "reinstall": "yarn clean && yarn add rimraf && npx rimraf ./yarn.lock && yarn",
     "clean": "npx rimraf node_modules && npx rimraf packages/*/node_modules",
-    "build": "yarn workspaces run build",
     "test": "yarn workspaces run test",
     "tsc": "echo 'You are trying to run \"tsc\" in the workspace root. Run it from an individual package instead.' && exit 1"
   },
   "devDependencies": {
-    "rimraf": "^5.0.7"
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "rimraf": "^5.0.7",
+    "standard-version": "^9.5.0"
   },
   "resolutions": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn workspaces run precommit",
+      "pre-push": "yarn type-check"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/uncoverthefuture-org/uncover-ui"
