--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.1.20",
+    "version": "1.1.21",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -67,22 +67,22 @@
         "typescript": "^5.5.2"
     },
     "peerDependencies": {
-        "@emotion/native": "^11.11.0",
-        "@emotion/react": "^11.11.4",
-        "@react-native-async-storage/async-storage": "^1.23.1",
-        "@react-native-picker/picker": "^2.7.7",
-        "@react-navigation/native": "^6.1.17",
+        "@emotion/native": "*",
+        "@emotion/react": "*",
+        "@react-native-async-storage/async-storage": "^1.21.0",
+        "@react-native-picker/picker": "^2.6.1",
+        "@react-navigation/native": "*",
         "he": "^1.2.0",
         "moment": "^2.30.1",
-        "react": "^18.3.1",
-        "react-native": "^0.72.0",
+        "react": "*",
+        "react-native": "*",
         "react-native-actions-sheet": "^0.9.3",
         "react-native-flash-message": "^0.4.2",
-        "react-native-gesture-handler": "^2.17.1",
+        "react-native-gesture-handler": "*",
         "react-native-mmkv": "^2.12.2",
         "react-native-responsive-fontsize": "^0.5.1",
         "react-native-responsive-screen": "^1.4.2",
-        "react-native-vector-icons": "^10.0.0"
+        "react-native-vector-icons": "*"
     },
     "lint-staged": {
         "src/**/*.{js,ts,tsx}": [
