--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.1.21",
+    "version": "1.1.23",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -29,28 +29,20 @@
         "precommit": "lint-staged"
     },
     "dependencies": {
-        "@emotion/native": "^11.11.0",
-        "@emotion/react": "^11.11.4",
-        "@react-native-async-storage/async-storage": "^1.23.1",
-        "@react-native-picker/picker": "^2.7.7",
-        "@react-navigation/native": "^6.1.17",
-        "expo-linear-gradient": "^13.0.2",
+        "@react-native-picker/picker": "^2.5.1",
+        "expo-linear-gradient": "^12.3.0",
         "he": "^1.2.0",
         "moment": "^2.30.1",
-        "react": "^18.3.1",
-        "react-native-actions-sheet": "^0.9.3",
+        "react-native-actions-sheet": "^0.9.0",
         "react-native-fade-loading": "^1.0.1",
         "react-native-flash-message": "^0.4.2",
-        "react-native-gesture-handler": "^2.17.1",
         "react-native-linear-gradient": "^2.8.3",
-        "react-native-mmkv": "^2.12.2",
+        "react-native-mmkv": "^2.10.0",
         "react-native-modal-datetime-picker": "^17.1.0",
         "react-native-otp-textinput": "^1.1.6",
         "react-native-phone-number-input": "^2.1.0",
         "react-native-responsive-fontsize": "^0.5.1",
-        "react-native-responsive-screen": "^1.4.2",
-        "react-native-vector-icons": "^10.0.0",
-        "yarn": "^1.22.22"
+        "react-native-responsive-screen": "^1.4.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.24.7",
@@ -58,11 +50,16 @@
         "@babel/preset-env": "^7.24.7",
         "@babel/preset-react": "^7.24.7",
         "@babel/preset-typescript": "^7.24.7",
+        "@emotion/native": "^11.11.0",
+        "@emotion/react": "^11.11.4",
+        "@react-native-async-storage/async-storage": "^1.23.1",
+        "@react-navigation/native": "^6.1.17",
         "@types/he": "^1.2.3",
         "@types/react": "^18.3.3",
         "@types/react-native": "^0.73.0",
         "@types/react-native-vector-icons": "^6.4.18",
         "babel-plugin-module-resolver": "^5.0.2",
+        "react-native-vector-icons": "^9.0.0",
         "rimraf": "^5.0.7",
         "typescript": "^5.5.2"
     },
@@ -72,17 +69,24 @@
         "@react-native-async-storage/async-storage": "^1.21.0",
         "@react-native-picker/picker": "^2.6.1",
         "@react-navigation/native": "*",
+        "expo-linear-gradient": "*",
         "he": "^1.2.0",
         "moment": "^2.30.1",
-        "react": "*",
-        "react-native": "*",
+        "react": "^18.2.0",
+        "react-native": "^0.72.0",
         "react-native-actions-sheet": "^0.9.3",
         "react-native-flash-message": "^0.4.2",
         "react-native-gesture-handler": "*",
         "react-native-mmkv": "^2.12.2",
         "react-native-responsive-fontsize": "^0.5.1",
         "react-native-responsive-screen": "^1.4.2",
-        "react-native-vector-icons": "*"
+        "react-native-vector-icons": "^9.0.0"
+    },
+    "resolutions": {
+        "react": "^18.2.0",
+        "react-native": "^0.72.0",
+        "@types/react": "^18.2.0",
+        "@types/react-native": "^0.72.0"
     },
     "lint-staged": {
         "src/**/*.{js,ts,tsx}": [
