--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.1.24",
+    "version": "1.1.26",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -59,6 +59,7 @@
         "@types/react-native": "^0.73.0",
         "@types/react-native-vector-icons": "^6.4.18",
         "babel-plugin-module-resolver": "^5.0.2",
+        "react-native-gesture-handler": "^2.17.1",
         "react-native-vector-icons": "^9.0.0",
         "rimraf": "^5.0.7",
         "typescript": "^5.5.2"
