--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.1.27",
+    "version": "1.1.28",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -19,9 +19,10 @@
         "access": "public"
     },
     "scripts": {
-        "build": "yarn clean && yarn build:js && yarn build:types",
+        "build": "yarn clean && yarn build:js && yarn build:types && yarn copy-assets",
         "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
         "build:types": "tsc --emitDeclarationOnly",
+        "copy-assets": "cpx \"src/assets/**/*\" lib/assets",
         "watch": "tsc --watch",
         "clean": "rimraf lib",
         "reinstall": "rimraf ./node_modules && rimraf ./yarn.lock && yarn",
@@ -37,7 +38,6 @@
         "react-native-fade-loading": "^1.0.1",
         "react-native-flash-message": "^0.4.2",
         "react-native-linear-gradient": "^2.8.3",
-        "react-native-mmkv": "^2.10.0",
         "react-native-modal-datetime-picker": "^17.1.0",
         "react-native-otp-textinput": "^1.1.6",
         "react-native-phone-number-input": "^2.1.0",
@@ -59,6 +59,7 @@
         "@types/react-native": "^0.73.0",
         "@types/react-native-vector-icons": "^6.4.18",
         "babel-plugin-module-resolver": "^5.0.2",
+        "cpx": "^1.5.0",
         "react-native-gesture-handler": "^2.17.1",
         "react-native-vector-icons": "^9.0.0",
         "rimraf": "^5.0.7",
@@ -78,7 +79,6 @@
         "react-native-actions-sheet": "^0.9.3",
         "react-native-flash-message": "^0.4.2",
         "react-native-gesture-handler": "*",
-        "react-native-mmkv": "^2.12.2",
         "react-native-responsive-fontsize": "^0.5.1",
         "react-native-responsive-screen": "^1.4.2",
         "react-native-vector-icons": "^9.0.0"
