updates so far for fonts and props

--- a/apps/react-native-app/package.json
+++ b/apps/react-native-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactNativeApp",
+  "name": "test-uncover-ui-react-native-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@uncover-ui/react-native": "^1.1.4",
+   "@uncover-ui/react-native": "*",
     "react": "18.2.0",
     "react-native": "0.74.2"
   },
