--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.1.82",
+    "version": "1.1.83",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -80,6 +80,7 @@
         "react": "^18.2.0",
         "react-native": "^0.72.0",
         "react-native-actions-sheet": "^0.9.3",
+        "react-native-fast-image": "^8.6.3",
         "react-native-flash-message": "^0.4.2",
         "react-native-gesture-handler": "*",
         "react-native-responsive-fontsize": "^0.5.1",
