--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
     "name": "@uncover-ui/react",
     "author": "uncoverthefuture",
     "module": "lib/react.esm.js",
-    "version": "0.2.11",
+    "version": "0.2.12",
     "description": "Resuable ui component for react web development",
     "license": "MIT",
     "main": "lib/index.js",
@@ -25,9 +25,6 @@
         "analyze": "size-limit --why",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook"
-    },
-    "peerDependencies": {
-        "react": ">=18"
     },
     "husky": {
         "hooks": {
@@ -107,6 +104,18 @@
         "react-icons": "^5.2.1",
         "react-phone-number-input": "^3.3.7",
         "reactjs-localstorage": "^1.0.1"
+    },
+    "peerDependencies": {
+        "@chakra-ui/react": "^2.8.2",
+        "@emotion/react": "*",
+        "@emotion/styled": "*",
+        "chakra-react-select": "^4.7.6",
+        "he": "^1.2.0",
+        "moment": "^2.30.1",
+        "react": ">=18",
+        "react-bootstrap": "^2.10.3",
+        "react-dropzone": "^14.2.3",
+        "react-icons": "^5.2.1"
     },
     "gitHead": "bd208d8e7a9b75a840515fea709649fc286ae063",
     "repository": {
