--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.1.85",
+    "version": "1.1.95",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -26,7 +26,8 @@
         "watch": "tsc --watch",
         "clean": "rimraf lib",
         "reinstall": "rimraf ./node_modules && rimraf ./yarn.lock && yarn",
-        "prepublishOnly": "yarn build",
+        "prepublish": "yarn version patch && yarn build",
+        "publish": "yarn npm publish",
         "precommit": "lint-staged"
     },
     "dependencies": {
