updated codes and types for reac-native and react

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,7 +26,9 @@
         "size": "size-limit",
         "analyze": "size-limit --why",
         "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "build-storybook": "build-storybook",
+        "prepublish": "yarn version patch && yarn build",
+        "publish": "yarn npm publish"
     },
     "husky": {
         "hooks": {
