--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.1.95",
+    "version": "1.2.19",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -73,6 +73,7 @@
         "@emotion/native": "*",
         "@emotion/react": "*",
         "@react-native-async-storage/async-storage": "^1.21.0",
+        "@react-native-community/datetimepicker": "^8.0.0",
         "@react-native-picker/picker": "^2.6.1",
         "@react-navigation/native": "*",
         "he": "^1.2.0",
