--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -58,6 +58,7 @@
         "@types/react-dom": "^18.2.17",
         "@types/reactjs-localstorage": "^1.0.2",
         "babel-loader": "^9.1.3",
+        "cpx": "^1.5.0",
         "cssnano": "^7.0.3",
         "husky": "^9.0.11",
         "install-peers-cli": "^2.2.0",
