added expo-sqlite as peer dependency

--- a/packages/react-native-usync/package.json
+++ b/packages/react-native-usync/package.json
@@ -83,7 +83,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "expo-sqlite": "^14.0.6"
   },
   "jest": {
     "preset": "react-native",
