--- a/packages/react-native-usync/package.json
+++ b/packages/react-native-usync/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-usync",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "a package to auto sync different kind of data immediately with a on device or development manages storage automatically, and use the local storage by default while developing or after building",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.cjs",
@@ -38,7 +38,7 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli lib",
     "prepare": "bob build",
-    "release": "release-it"
+    "release": "npx release-it"
   },
   "keywords": [
     "react-native",
