--- a/packages/react-native-usync/package.json
+++ b/packages/react-native-usync/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-usync",
-  "version": "0.1.5",
+  "version": "0.1.13",
   "description": "a package to auto sync different kind of data immediately with a on device or development manages storage automatically, and use the local storage by default while developing or after building",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.cjs",
@@ -38,7 +38,10 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli lib",
     "prepare": "bob build",
-    "release": "npx release-it"
+    "release": "npx release-it",
+    "reinstall": "rimraf ./node_modules && rimraf ./yarn.lock && yarn",
+    "prepublish": "yarn version patch && bob build",
+    "publish": "yarn npm publish"
   },
   "keywords": [
     "react-native",
@@ -56,7 +59,7 @@
   },
   "homepage": "https://github.com/uncoverthefuture-org/uncover-ui/tree/master/packages/react-native-usync/react-native-usync#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "access": "public"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
@@ -76,15 +79,16 @@
     "react-native": "0.74.3",
     "react-native-builder-bob": "^0.25.0",
     "release-it": "^15.0.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.2.2"
   },
   "resolutions": {
     "@types/react": "^18.2.44"
   },
   "peerDependencies": {
+    "expo-sqlite": "^14.0.6",
     "react": "*",
-    "react-native": "*",
-    "expo-sqlite": "^14.0.6"
+    "react-native": "*"
   },
   "jest": {
     "preset": "react-native",
