--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -81,7 +81,7 @@
         "@emotion/styled": "^11.11.0",
         "autoprefixer": "^10.4.16",
         "bootstrap": "^5.3.2",
-        "chakra-react-select": "5.0.0-rc.8",
+        "chakra-react-select": "^4.10.1",
         "framer-motion": "^11.2.12",
         "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
@@ -95,7 +95,6 @@
     "peerDependencies": {
         "@emotion/react": "*",
         "@emotion/styled": "*",
-        "chakra-react-select": "5.0.0-rc.8",
         "framer-motion": "^11.2.12",
         "he": "^1.2.0",
         "moment": "^2.30.1",
