--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tsc": "echo 'You are trying to run \"tsc\" in the workspace root. Run it from an individual package instead.' && exit 1"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.10",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "rimraf": "^5.0.7",
