perf: updated the  installing of dependenncies to be fixed to the lockfile of yarn and the contextual name  to match the given action in the action script

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,10 +14,10 @@ jobs:
           node-version: '16'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Install dependencies and build 🔧
-        run: yarn
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
-      - name: Install dependencies and build 🔧
+      - name: Version changes
         run: yarn changeset version
 
       - name: Publish package on NPM 📦
