pref: bump up only root package.json

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         uses: TriPSs/conventional-changelog-action@v3.7.1
         with:
           github-token: ${{ secrets.PA_TOKEN }}
-          version-file: './package.json,./yarn.lock'
+          version-file: './package.json'
 
       - name: create release
         uses: actions/create-release@v1
