--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/uncoverthefuture-org/uncover-ui"
-  }
+  },
+  "packageManager": "yarn@4.5.2"
 }
