--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/react-native",
-    "version": "1.2.60",
+    "version": "1.2.62",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -46,7 +46,8 @@
         "react-native-otp-textinput": "^1.1.6",
         "react-native-phone-number-input": "^2.1.0",
         "react-native-responsive-fontsize": "^0.5.1",
-        "react-native-responsive-screen": "^1.4.2"
+        "react-native-responsive-screen": "^1.4.2",
+        "react-native-safe-area-context": "^4.14.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.24.7",
@@ -86,6 +87,7 @@
         "react-native-gesture-handler": "*",
         "react-native-responsive-fontsize": "^0.5.1",
         "react-native-responsive-screen": "^1.4.2",
+        "react-native-safe-area-context": "*",
         "react-native-vector-icons": "^9.0.0"
     },
     "resolutions": {
