--- a/apps/react-native-app/package.json
+++ b/apps/react-native-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/cli": "^13.6.9",
     "@uncover-ui/react-native": "*",
+    "@uncover-ui/rn-sheet-provider": "^0.0.17",
     "react": "18.2.0",
     "react-native": "0.74.2"
   },
