--- a/packages/react-native-sheet-provider/package.json
+++ b/packages/react-native-sheet-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uncover-ui/rn-sheet-provider",
-  "version": "0.0.7",
+  "version": "0.0.17",
   "description": "UncoverUI component library for React Native",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -41,8 +41,9 @@
     "typescript": "^4.0.0"
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-native": "^0.72.0"
+    "react": "^18.2.0",
+    "react-native": "^0.72.0",
+    "react-native-actions-sheet": "^0.9.3"
   },
   "repository": {
     "type": "git",
