--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "rimraf": "^5.0.7",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "typescript": "^5.7.3"
   },
   "husky": {
     "hooks": {
