--- a/packages/react-native-preview-media/package.json
+++ b/packages/react-native-preview-media/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uncover-ui/rn-preview-media",
-    "version": "0.1.11",
+    "version": "0.1.13",
     "description": "UncoverUI component library for React Native",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -29,9 +29,10 @@
         "publish": "yarn npm publish"
     },
     "dependencies": {
-        "@uncover-ui/rn-modal-provider": "^0.1.8",
+        "@uncover-ui/rn-modal-provider": "workspace:^",
         "react-native-image-viewing": "^0.2.2",
-        "react-native-responsive-screen": "^1.4.2"
+        "react-native-responsive-screen": "^1.4.2",
+        "react-native-video": "^6.11.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
@@ -40,7 +41,6 @@
         "typescript": "^4.0.0"
     },
     "peerDependencies": {
-        "@uncover-ui/rn-modal-provider": "^0.1.8",
         "react": "^18.3.1",
         "react-native": "^0.72.0",
         "react-native-gesture-handler": "^2.17.1",
