--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -33,7 +33,7 @@
     "dependencies": {
         "@react-native-picker/picker": "^2.5.1",
         "@types/lodash": "^4.17.6",
-        "expo-linear-gradient": "^12.3.0",
+        "expo-linear-gradient": "~15.0.8",
         "he": "^1.2.0",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
@@ -79,8 +79,8 @@
         "@react-navigation/native": "*",
         "he": "^1.2.0",
         "moment": "^2.30.1",
-        "react": "^18.2.0",
-        "react-native": "^0.72.0",
+        "react": "^18.3.1",
+        "react-native": "^0.81.0",
         "react-native-actions-sheet": "^0.9.3",
         "react-native-fast-image": "^8.6.3",
         "react-native-flash-message": "^0.4.2",
